[gd_scene load_steps=4 format=2]

[ext_resource path="res://1. GFX/GUI/TalkBoxBlack.png" type="Texture" id=1]
[ext_resource path="res://4. Scenes/Menus/theme.tres" type="Theme" id=2]
[ext_resource path="res://4. Scenes/Menus/loseMenu.gd" type="Script" id=3]

[node name="loseMenu" type="Popup" groups=[
"loseMenu",
]]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -164.0
margin_right = 232.0
margin_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 377.0
margin_top = 206.0
margin_right = 647.0
margin_bottom = 394.0
custom_constants/separation = 36
alignment = 1

[node name="youDiedLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 270.0
margin_bottom = 26.0
text = "oh dear, you died!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 270.0
margin_bottom = 88.0

[node name="yourScoreWasLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 26.0
text = "Your score was: "
align = 1

[node name="scoreLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 270.0
margin_bottom = 26.0
text = "0"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 270.0
margin_bottom = 188.0

[node name="tryAgainButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 270.0
margin_bottom = 30.0
text = "Try again"

[node name="ReturnToMenuButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 270.0
margin_bottom = 64.0
text = "Return to menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/tryAgainButton" to="." method="_on_tryAgainButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/ReturnToMenuButton" to="." method="_on_ReturnToMenuButton_pressed"]
